--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "aos": "^2.3.4",
     "express": "^4.17.1",
-    "node-sass": "^6.0.0",
+    "sass": "^1.57.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
